pbrprod1/prod/sc3-scheduler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2019-11-18T22:29:49Z"
  labels:
    app: sc3-scheduler
    env: prod
    maestro: "true"
    team: berlin-server
  name: sc3-scheduler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sc3-scheduler
      env: prod
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: app-prod-sc3-scheduler
      creationTimestamp: null
      labels:
        app: sc3-scheduler
        env: prod
        maestro: "true"
        team: berlin-server
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sc3-scheduler
                  env: prod
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sc3-scheduler
                  env: prod
              topologyKey: kubernetes.io/hostname
            weight: 10
      containers:
      - env:
        - name: SHARECARE_AUTH_TOKEN
          valueFrom:
            secretKeyRef:
              key: SHARECARE_AUTH_TOKEN
              name: sc3-scheduler
        - name: MAESTRO_MONGO_FTECHSCHEDULER_USERNAME
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_FTECHSCHEDULER_USERNAME
              name: sc3-scheduler
        - name: MAESTRO_MONGO_FTECHSCHEDULER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_FTECHSCHEDULER_PASSWORD
              name: sc3-scheduler
        - name: MAESTRO_MONGO_FTECHSCHEDULER_HOSTS
          value: prod-pbrprod1-maestro-133fdcb8-shard-00-00-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-01-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-02-cvafn.mongodb.net:27017
        - name: MAESTRO_MONGO_FTECHSCHEDULER_OPTIONS
          value: '{"ssl":"true","authSource":"admin","replicaSet":"prod-pbrprod1-maestro-133fdcb8-shard-0"}'
        - name: MAESTRO_MONGO_FTECHSCHEDULER_CONNSTR
          value: mongodb://$(MAESTRO_MONGO_FTECHSCHEDULER_USERNAME):$(MAESTRO_MONGO_FTECHSCHEDULER_PASSWORD)@prod-pbrprod1-maestro-133fdcb8-shard-00-00-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-01-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-02-cvafn.mongodb.net:27017/ftech-scheduler?ssl=true&authSource=admin&replicaSet=prod-pbrprod1-maestro-133fdcb8-shard-0
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CREATION_TIMESTAMP
          value: "1574116189123"
        - name: INSTANCE
          value: api-sc3.sharecare.com.br
        - name: REGION
          value: BR
        - name: MAESTRO_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MAESTRO_CREATION_TIMESTAMP
          value: "1574116189123"
        - name: MAESTRO_INSTANCE
          value: api-sc3.sharecare.com.br
        - name: MAESTRO_HOSTS
          value: api-sc3.sharecare.com.br
        - name: MAESTRO_REGION
          value: BR
        - name: MAESTRO_ALL_REGIONS
          value: BR
        image: nexus.admin.sharecare.com/sc3-scheduler:2.0.20-46
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        name: sc3-scheduler
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /healthcheck
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
        resources:
          limits:
            memory: 2048m
          requests:
            cpu: 500m
            memory: 2048m
      - env:
        - name: SHARECARE_AUTH_TOKEN
          valueFrom:
            secretKeyRef:
              key: SHARECARE_AUTH_TOKEN
              name: sc3-scheduler
        - name: MAESTRO_MONGO_FTECHSCHEDULER_USERNAME
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_FTECHSCHEDULER_USERNAME
              name: sc3-scheduler
        - name: MAESTRO_MONGO_FTECHSCHEDULER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MAESTRO_MONGO_FTECHSCHEDULER_PASSWORD
              name: sc3-scheduler
        - name: MAESTRO_MONGO_FTECHSCHEDULER_HOSTS
          value: prod-pbrprod1-maestro-133fdcb8-shard-00-00-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-01-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-02-cvafn.mongodb.net:27017
        - name: MAESTRO_MONGO_FTECHSCHEDULER_OPTIONS
          value: '{"ssl":"true","authSource":"admin","replicaSet":"prod-pbrprod1-maestro-133fdcb8-shard-0"}'
        - name: MAESTRO_MONGO_FTECHSCHEDULER_CONNSTR
          value: mongodb://$(MAESTRO_MONGO_FTECHSCHEDULER_USERNAME):$(MAESTRO_MONGO_FTECHSCHEDULER_PASSWORD)@prod-pbrprod1-maestro-133fdcb8-shard-00-00-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-01-cvafn.mongodb.net:27017,prod-pbrprod1-maestro-133fdcb8-shard-00-02-cvafn.mongodb.net:27017/ftech-scheduler?ssl=true&authSource=admin&replicaSet=prod-pbrprod1-maestro-133fdcb8-shard-0
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CREATION_TIMESTAMP
          value: "1574116189123"
        - name: INSTANCE
          value: api-sc3.sharecare.com.br
        - name: REGION
          value: BR
        - name: MAESTRO_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MAESTRO_CREATION_TIMESTAMP
          value: "1574116189123"
        - name: MAESTRO_INSTANCE
          value: api-sc3.sharecare.com.br
        - name: MAESTRO_HOSTS
          value: api-sc3.sharecare.com.br
        - name: MAESTRO_REGION
          value: BR
        - name: MAESTRO_ALL_REGIONS
          value: BR
        image: nexus.admin.sharecare.com/ftech-envoy-mesh-client:stable
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sleep
              - "5"
        name: sc3-scheduler-sidecar-0
        ports:
        - containerPort: 8080
          name: sidecar-0
          protocol: TCP
        resources:
          limits:
            memory: 512m
          requests:
            cpu: 500m
            memory: 64m
        volumeMounts:
        - mountPath: /etc/envoy/ssl/
          name: etc-envoy-ssl--sidecar-0
          readOnly: true
      imagePullSecrets:
      - name: nexus
      volumes:
      - name: etc-envoy-ssl--sidecar-0
        secret:
          secretName: sc3-scheduler
status: {}
